build/usd-sys/usd-c/include.in/pxr/base/vt/vt_array.h

typedef struct pxrInternal_v0_21__pxrReserved____GfMatrix4d_t_s pxrInternal_v0_21__pxrReserved____GfMatrix4d_t;
typedef pxrInternal_v0_21__pxrReserved____GfMatrix4d_t pxr_GfMatrix4d_t;
typedef struct pxrInternal_v0_21__pxrReserved____VtArray_pxr__GfMatrix4d__t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____VtArray_pxr__GfMatrix4d__t;
typedef pxrInternal_v0_21__pxrReserved____VtArray_pxr__GfMatrix4d__t pxr_VtArrayGfMatrix4d_t;
/** Appends an element at the end of the array. The underlying data
is first copied if it is not uniquely owned.

\sa emplace_back
\sa push_back(ElementType&&) */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____VtArray_pxr__GfMatrix4d__push_back(
    pxr_VtArrayGfMatrix4d_t * this_
    , pxr_GfMatrix4d_t const * elem);
/** Return the total number of elements in this array. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____VtArray_pxr__GfMatrix4d__size(
    pxr_VtArrayGfMatrix4d_t const * this_
    , size_t * return_);
/** Ensure enough memory is allocated to hold \p num elements.  Note that
this currently does not ensure that the underlying data is uniquely
owned.  If that is desired, invoke a method like data() first. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____VtArray_pxr__GfMatrix4d__reserve(
    pxr_VtArrayGfMatrix4d_t * this_
    , size_t num);
/** Allows usage of [i]. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____VtArray_pxr__GfMatrix4d__index_mut(
    pxr_VtArrayGfMatrix4d_t * this_
    , pxr_GfMatrix4d_t * * return_
    , size_t index);
/** Allows usage of [i]. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____VtArray_pxr__GfMatrix4d__index(
    pxr_VtArrayGfMatrix4d_t const * this_
    , pxr_GfMatrix4d_t const * * return_
    , size_t index);