build/usd-sys/src/pxr/base/vt/vt_array.rs


pub fn pxrInternal_v0_21__pxrReserved____VtArray_pxr__GfMatrix4d__push_back(this_: *mut pxr_VtArrayGfMatrix4d_t, elem: *const pxr_GfMatrix4d_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____VtArray_pxr__GfMatrix4d__size(this_: *const pxr_VtArrayGfMatrix4d_t, return_: *mut usize) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____VtArray_pxr__GfMatrix4d__reserve(this_: *mut pxr_VtArrayGfMatrix4d_t, num: usize) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____VtArray_pxr__GfMatrix4d__index_mut(this_: *mut pxr_VtArrayGfMatrix4d_t, return_: *mut *mut pxr_GfMatrix4d_t, index: usize) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____VtArray_pxr__GfMatrix4d__index(this_: *const pxr_VtArrayGfMatrix4d_t, return_: *mut *const pxr_GfMatrix4d_t, index: usize) -> Exception;


} // extern "C"
